feat: add day 7

--- a/AdventOfCode2022.csproj
+++ b/AdventOfCode2022.csproj
@@ -22,6 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Tests\Day7\ExampleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Tests\Day7\Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Tests\Day6\Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
